--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,31 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
+  # state management / important
+  provider: ^6.0.2
+  get: ^4.6.1
+
+  http: ^0.13.4
+  url_launcher: ^6.0.18
+
+  # local storage: Hive/Shared Pref
+#  hive: ^2.0.5
+#  hive_generator: ^1.1.2
+  shared_preferences: ^2.0.12
+
+  # core
+  flutter_screenutil: ^5.1.0
+  flutter_local_notifications: ^9.2.0
+  velocity_x: ^3.4.0
+  intl: ^0.17.0
+  responsive_framework: ^0.1.5
+  animated_text_kit: ^4.2.1
+
+  # extras
+  google_fonts: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,8 +79,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/
+     - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -73,10 +95,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Consolas
+       fonts:
+         - asset: assets/fonts/Consolas.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
